prevent the dialog from overflowing horizontally plus a couple more UI tweaks

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -115,9 +115,10 @@ dialog {
   inset: 1rem;
   background: var(--color-bg);
   color: var(--color-fg);
-  max-width: 36rem;
+  width: 36rem;
+  max-width: calc(100vw - 2rem);
   max-height: calc(100svh - 2rem);
-  overflow-y: auto;
+  overflow: auto;
   opacity: 0;
   transition: opacity 250ms;
   border: 2px solid var(--color-ui-border);
